syntax = "proto3";
package pb;

option go_package = "../pb";

message Cheque {
	string operator_address = 1; // operator
	string from = 2;	// user
	string to =3;	// storage
	string token_address = 4;	// token

	int64 value = 5;
	int64 node_nonce = 6;
}

message PayCheque {
	Cheque cheque = 1;
	bytes cheque_sig = 2; //运营商对cheque的签名

	string cash_address = 3; //运营合约地址
	string from = 4; //user地址
	string to = 5; //storage

	int64 pay_value = 6; //支付给存储节点的数额必须小于等于cheque.max_amount
}

message PayChequeBatch {
	string cheque_batch_to = 1; //存储节点号
	int64 cheque_batch_value = 2; //聚合后的支票面额
	int64 min_nonce = 3; //聚合的nonce最小值
	int64 max_nonce = 4; //聚合的nonce最大值
}
